fix #1705: don't hide picturebuttons on small screen

--- a/client/Components/Lobby/PictureButton.scss
+++ b/client/Components/Lobby/PictureButton.scss
@@ -109,7 +109,7 @@
 
     // .img-button-label,
     .nav-buttons {
-        display: none;
+        // display: none;
     }
 
     .lobby-card {
